--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,25 @@
 
+body {
+    background-color: black;
+
+}
+
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: normal;
+  font-size: 50px;
+  color: white;
+  text-align: center;  
+}
+
+#link {
+    font-size: 16px;
+    color: aquamarine;
+    text-decoration: underline;
+    text-align: center;
+}
+
+#video #image {
+    align-items: center;
+
+}
