--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,25 +1,37 @@
 
 body {
     background-color: black;
-
+    text-align: center;
 }
 
-h1 {
+#title {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: normal;
   font-size: 50px;
   color: white;
-  text-align: center;  
+    
 }
 
 #link {
     font-size: 16px;
     color: aquamarine;
     text-decoration: underline;
-    text-align: center;
+  
+}
+#aboutapp {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: gray;
 }
 
 #video #image {
     align-items: center;
 
+}
+
+#personal {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+    color: white;
 }
